--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Leia Parental Control",
-	"description": "Deprecated. Do not use this version",
-	"version": "1.3.0",
+	"description": "A chrome extension for parents to monitor and limit their kids time on the internet.",
+	"version": "1.3.1",
 	"manifest_version": 2,
 	"options_ui": {
 		"page": "app/options.html",
