WebPack, Local node modules. Reworked all the node modules to be local. Move to webpack, webpack-dev-server and reactjs.

--- a/extension/package.json
+++ b/extension/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "Leia Parental Control Extension",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "Pascal GANAYE",
   "license": "ISC",
   "repository": {
     "type": "git",
     "url": "https://github.com/paganaye/leia-parental-control/extension"
+  },
+  "scripts": {
+    "tsc": "tsc"
+  },
+  "devDependencies": {
+    "typescript": "^2.0.10"
   }
 }
