--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -7,7 +7,8 @@
         "target": "es5",
         "jsx": "react",
         "moduleResolution": "node",
-        "watch": false
+        "watch": false,
+        "skipLibCheck": true
     },
     "files": [
         "./src/components/Hello.tsx",
