--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -12,6 +12,7 @@
     },
     "files": [
         "./src/components/Hello.tsx",
-        "./src/index.tsx"
+        "./src/index.tsx",
+        "./src/firebase.d.ts"
     ]
 }
