--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "outDir": "dist",
+        "outDir": "dist/app",
         "watch": true,
         "strictNullChecks": true,
         "noImplicitAny": true,
